--- a/src/styles/common/imagecard.less
+++ b/src/styles/common/imagecard.less
@@ -110,6 +110,13 @@
     }
 }
 
+// dark mode
+.dark {
+    .image-card {
+        filter: brightness(0.8);
+    }
+}
+
 /* Mobile */
 @media(max-width: 767px) {
     .image-card {
