--- a/src/styles/pic/author.less
+++ b/src/styles/pic/author.less
@@ -33,6 +33,13 @@
     }
 }
 
+// dark mode
+.dark {
+    .pic-author-info-avatar {
+        filter: brightness(0.875);
+    }
+}
+
 /* Responsive */
 @media(max-width: 1024px) {
     .pic-author {
