--- a/src/styles/pic/presentation.less
+++ b/src/styles/pic/presentation.less
@@ -169,6 +169,15 @@
     }
 }
 
+// dark mode
+.dark {
+    .pic-presentation-image-wrapper {
+        .pic-presentation-image {
+            filter: brightness(0.875);
+        }
+    }
+}
+
 /* Responsive */
 
 // 2k
