add: more dark mode styles

--- a/src/styles/404/404.less
+++ b/src/styles/404/404.less
@@ -29,6 +29,13 @@
     }
 }
 
+// dark
+.dark {
+    .notfound-button {
+        filter: brightness(0.875);
+    }
+}
+
 @media (max-width: 667px) {
     .notfound-wrapper {
         margin-bottom: 3.75rem;
