--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -4,3 +4,9 @@
     border: 2px solid @color-text-primary !important;
     border-right: transparent !important;
 }
+
+.dark {
+    .loading-spiral {
+        border: 2px solid darken(@color-text-primary, 2.5%) !important;
+    }
+}
