--- a/src/styles/pic/lightbox.less
+++ b/src/styles/pic/lightbox.less
@@ -25,6 +25,12 @@
     }
 }
 
+.dark {
+    .lightbox {
+        filter: brightness(0.875);
+    }
+}
+
 @media screen and (orientation: portrait) and (max-width: 768px) {
     .lightbox {
         &-content {
