--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -7,6 +7,8 @@
 
 .dark {
     .loading-spiral {
+        width: 28px !important;
+        height: 28px !important;
         border: 2px solid darken(@color-text-primary, 2.5%) !important;
     }
 }
