fix: infinite loading sprital style

--- a/src/styles/common/infinite.less
+++ b/src/styles/common/infinite.less
@@ -7,8 +7,7 @@
 
 .dark {
     .loading-spiral {
-        width: 28px !important;
-        height: 28px !important;
         border: 2px solid darken(@color-text-primary, 2.5%) !important;
+        border-right: transparent !important;
     }
 }
