--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -2,15 +2,8 @@
     width: 100%;
     height: 56.375rem;
     max-height: 21.25rem;
-    box-shadow: @shadow-medium;
-    border-radius: 1rem;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position-x: center;
-    background-position-y: 0;
     position: relative;
-    transition: 0.5s ease-in-out;
-    transition-property: max-height;
+    transition: max-height 0.5s ease-in-out;
 }
 
 .banner-expanded {
@@ -28,8 +21,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 1rem;
-    background: linear-gradient(to right, hsla(255, 255, 255, 0.1), hsla(0, 0, 0, 0.125) 35%, hsla(0, 0, 0, 0.125) 65%, hsla(255, 255, 255, 0.1));
     span, a {
         color: @color-text-accent;
         letter-spacing: 0.1em;
@@ -128,7 +119,6 @@
     .banner-wrapper {
         height: 704px;
         max-height: 214px;
-        background-position-y: 15%;
     }
     .banner-expanded {
         max-height: 704px;
@@ -158,36 +148,12 @@
     }
 }
 
-@media (max-width: 1330px) {
-    .banner-wrapper {
-        background-size: cover;
-    }
-}
-
-// iPad Pro
-@media(max-width: 1024px) and (max-height: 1366px) {
-    .banner-wrapper {
-        background-size: 135%;
-    }
-}
-@media(max-width: 1020px) and (max-height: 1365px) {
-    .banner-wrapper {
-        background-size: cover;
-    }
-}
-
 // iPad
-@media(max-width: 768px) and (max-height: 1024px) {
-    .banner-wrapper {
-        background-size: 220%;
-    }
-}
 
 @media (max-height: 754px) {
     .banner-wrapper {
         height: 690px;
         max-height: 240px;
-        background-size: 120%;
     }
     .banner-expanded {
         max-height: 690px;
@@ -197,20 +163,12 @@
     }
 }
 
-@media (max-width: 920px) and (max-height: 754px) {
-    .banner-wrapper {
-        background-size: cover;
-    }
-}
-
 /* Mobile */
 
 @media (max-width: 767px) {
     .banner-wrapper {
         height: 600px;
         max-height: 200px;
-        background-size: 300%;
-        background-position-y: 10%;
     }
     .banner-expanded {
         max-height: 600px;
@@ -265,6 +223,5 @@
 @media(max-width: 320px) and (max-height: 568px) {
     .banner-wrapper {
         max-height: 182px;
-        background-size: 350%;
     }
 }
