--- a/src/styles/landing/rankbox.less
+++ b/src/styles/landing/rankbox.less
@@ -52,6 +52,30 @@
     }
 }
 
+// 2k
+
+@media(min-height: 1200px) and (min-width: 1960px) {
+    .rankbox-wrapper {
+        width: 100%;
+        height: 24.5rem;
+    }
+    .rankbox {
+        span {
+            font-size: 2.5rem;
+        }
+        &-title {
+            padding-bottom: 2rem;
+        }
+        &-options {
+            &-split {
+                margin: 0 3.25rem;
+            }
+        }
+    }
+}
+
+// low height
+
 @media (max-height: 754px) {
     .rankbox-wrapper {
         height: 202px;
