--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -71,6 +71,21 @@
 
 /* Desktop */
 
+// 2k
+
+@media(min-height: 1200px) and (min-width: 1960px) {
+    .searchbox-wrapper {
+        height: 24rem;
+    }
+    .searchbox {
+        padding: 5.875rem 4rem;
+        transform: scale(1.25);
+        &-title {
+            font-size: 1.8rem;
+        }
+    }
+}
+
 @media(max-height: 754px) {
     .searchbox-wrapper {
         width: 100%;
