--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -31,6 +31,10 @@ body::-webkit-scrollbar-track {
     background: @color-background-primary;
 }
 
+.no-scrollbar {
+    overflow: hidden;
+}
+
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
