--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -3,6 +3,7 @@
 @import './basic/color.less';
 @import './basic/layout.less';
 @import './basic/shadow.less';
+@import './basic/anim.less';
 
 /* Common components */
 @import './common/imagecard.less';
