--- a/src/styles/landing/banner.less
+++ b/src/styles/landing/banner.less
@@ -119,26 +119,28 @@
 
 @media(min-height: 1200px) and (min-width: 1960px) {
     .banner-wrapper {
-        height: 78.75rem;
-        max-height: 28rem;
+        height: 68.5rem;
+        max-height: 22rem;
     }
     .banner-expanded {
-        max-height: 78.75rem;
+        max-height: 68.5rem;
     }
     .banner {
-        transform: scale(1.3);
+        &-title {
+            font-size: 5.5rem;
+        }
         &-title-up {
-            transform: translateY(-20rem);
+            transform: translateY(-22.5rem);
         }
         &-borrow {
             margin-top: 1.5rem;
         }
         .about {
             position: absolute;
-            bottom: 17rem;
-            transform: scale(1.2);
+            bottom: 12rem;
+            transform: scale(1.35);
             &-copyright {
-                margin-top: 5.375rem;
+                margin-top: 5rem;
             }
         }
     }
