add: sensitive word block

--- a/src/styles/search/search.less
+++ b/src/styles/search/search.less
@@ -121,6 +121,7 @@
         margin-top: 1.5rem;
         color: @color-text-primary;
         font-weight: 600;
+        user-select: none;
     }
 }
 
