add: download button

--- a/src/styles/basic/layout.less
+++ b/src/styles/basic/layout.less
@@ -137,6 +137,9 @@ button:focus {
       border-color: lighten(@color-background-dark, 10%);
     }
 	}
+	.el-message {
+		filter: brightness(0.8);
+	}
 	.el-notification {
 		background: lighten(@color-background-dark, 5%);
 		border: lighten(@color-background-dark, 2.5%);
